# highflame-python

./: CLI_PYPROJECT.toml  Makefile  README.md  pyproject.toml
cli/highflame_cli/: pyproject.toml
v2/: CLI_PYPROJECT.toml  CLI_SEPARATION_PLAN.md  LOGGING.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  README_V2.md  pyproject.toml
v2/examples/agents/: crewai_highflame.ipynb  langgraph_highflame.ipynb  openai_agents_highflame.py  secure_ai_agent.ipynb
v2/examples/anthropic/: anthropic_api_function_calling.py  anthropic_function_call.py  highflame_anthropic_api_call.py  highflame_anthropic_univ_endpoint.py  openai_compatible_univ_anthropic.py
v2/examples/azure-openai/: azure-universal.py  azure_function_call.py  azure_general_route.py  highflame_azureopenai_univ_endpoint.py  langchain_azure_universal.py  langchain_chatmodel_example.py  openai_azureopenai_testing.ipynb  openai_compatible_univ_azure.py
v2/examples/bedrock/: bedrock_client.py  bedrock_client_universal.py  bedrock_function_tool_call.py  bedrock_general_route.py  highflame_bedrock_univ_endpoint.py  langchain-bedrock-universal.py  openai_compatible_univ_bedrock.py
v2/examples/customer_support_agent/: .gitignore  README.md
v2/examples/gemini/: document_processing.py  gemini-universal.py  gemini_function_tool_call.py  highflame_gemini_univ_endpoint.py  langchain_chatmodel_example.py  openai_compatible_univ_gemini.py  strawberry.py
v2/examples/guardrails/: langgraph_guardrails_mcp_example.py  test_guardrails.py
v2/examples/mistral/: langchain_chatmodel_example.py  mistral_function_tool_call.py
v2/examples/openai/: highflame_openai_univ_endpoint.py  img_generations_example.py  langchain-openai-universal.py  langchain_callback_example.py  langchain_chatmodel_example.py  o1-03_function-calling.py  openai-azure-fun_calling.ipynb  openai-universal.py  openai_compatible_univ.py  openai_embedding_example.py  openai_general_route.py
v2/examples/rag/: highflame_rag_embeddings_demo.ipynb  rag_implemetation_highflame.ipynb
v2/examples/route_examples/: aexample.py  drop_in_replacement.py  example.py  highflame_sdk_app.py
v2/highflame/: __init__.py  chat_completions.py  client.py  exceptions.py  models.py  tracing_setup.py
v2/highflame/services/: aispm_service.py  gateway_service.py  provider_service.py  (+4 more)
v2/highflame_cli/: cli.py
v2/swagger/: sync_models.py
(+122 files in other folders)
